force-app/main/default/objects/ADM_MatchingRule__c/ADM_MatchingRule__c.object-meta.xml
<CustomObject>
    <label>ADM MatchingRule</label>
    <nameField>
        <label>ADM MatchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADM MatchingRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>