force-app/main/default/objects/ADM_MatchingRule__c/fields/BooleanFilter__c.field-meta.xml
<CustomField>
    <fullName>BooleanFilter__c</fullName>
    <label>BooleanFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>