force-app/main/default/objects/ADM_MatchingRule__c/fields/MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>MasterLabel__c</fullName>
    <label>MasterLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>