force-app/main/default/objects/ADM_MatchingRule__c/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <label>NamespacePrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>